--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <span>This is a start page</span>
                 <p> My attempt to create a music playlist and my first expirience with files and
                     folders :) <br> ► Creator: <a href="https://t.me/gd_4ever" target="_blank">@gd_4ever</a> 
-                    <br> ► My channel: <a href="https://t.me/beginners_but" target="_blank">@beginners_but</a>
+                    <br> ► My channel: <a href="https://t.me/space_bar_rar" target="_blank">@space_bar_rar</a>
                     <br> ► Thanks for idea: <a href="https://t.me/teatteaa" target="_blank">@teatteaa</a> 
                     <br> ► Special thanks: <a href="https://t.me/MerchantArm" target="_blank">@MerchantArm</a> 
                     <br> ▽▽ Player template: ↓↓↓
@@ -79,5 +79,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
